css/menu.css
@charset "utf-8";

/* Default styles for XS screens */ 
#menu-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  margin: auto;
  margin-top: 3rem; /* BS5 mt-5 */
  border: 1px solid #dee2e6; /* Default BS5 border */
}

.menu-item {
  text-align: center;
}

.menu-link {
  font-size: 14px; /* Default font size for XXS screens 320px */
  font-weight: 700;
  letter-spacing: 0.25px;
  color: #212529 !important;
  border: none !important;
  border-radius: 0 !important;
  padding: 1rem;
  margin: 0;
}

.menu-link.active {
  background-color: #FFF;
  opacity: 1;
}

.menu-link:hover {
  opacity: 0.9;
  transition: transform 0.3s ease, opacity 0.3s ease;
}

.tab-content {
  box-shadow: none !important;
}

.subcategory-heading {
  padding: 1rem;
}

.menu-card {
  border: none;
  border-radius: 0;
}

.diet-badge {
  color: grey;
  letter-spacing: 1px;
  padding-left: 5px;
  padding-right: 5px;
}

.menu-price {
  display: inline-block;
  vertical-align: middle;
  line-height: normal;
  margin: 0 auto;
}

/* XS screens (>375px) */
@media (min-width: 375px) {
  .menu-link {
    font-size: 16px;
  }
}

/* Small screens (>576px) */
@media (min-width: 576px) {
  .menu-link {
    font-size: 18px;
  }
}

/* Medium screens (>768px) */
@media(min-width: 768px) {
  .menu-card {
    padding: 0 3rem;
  }
}

/* Large screens (>992px) */
@media(min-width: 992px) {
  #menu-container {
    width: 75%;
  }
}

